fix horizontal scroll

--- a/always-on-frontend/src/App.css
+++ b/always-on-frontend/src/App.css
@@ -75,7 +75,7 @@
 .main-container {
 	display: grid;
 	grid-template-columns: 1fr 3fr;
-	width: 100vw;
+	width: 100%;
 	height: 100h;
 }
 
